--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^19.0.0",
     "styled-components": "^6.1.18",
     "tailwind-merge": "^3.2.0",
-    "telegram-webapps-types": "^1.0.5"
+    "telegram-webapps-types": "^1.0.5",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
